accept/cancel invite

--- a/src/main/resources/templates/email/team-invite.html
+++ b/src/main/resources/templates/email/team-invite.html
@@ -149,7 +149,7 @@
                             style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;"></h1>
                         <h2 style="margin: 0; font-size: 24px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">
                             You are invited to join
-                            <p th:text="${' ' + team.title}"></p>
+                            <span th:text="${' ' + team.title}"></span>
                         </h2>
                     </td>
                 </tr>
